# low-latency-market-data-feed-handler

./: .gitignore  CLAUDE.MD  CMakeLists.txt  CMakePresets.json  README.md  market_data_feed_handler_HLD.md  market_data_feed_handler_architecture.md  market_data_feed_handler_build_guide.md
affinity/: CMakeLists.txt  test_thread_affinity.cpp  thread_affinity.hpp  thread_affinity_linux.cpp  thread_affinity_macos.cpp
bench/: CMakeLists.txt  allocation_bench.cpp  latency_bench.cpp  pinning_bench.cpp
cmake/: Sanitizers.cmake
concurrency/: CMakeLists.txt  gap_detector.hpp  latency_trace.hpp  spsc_ring_buffer.hpp  test_gap_detector.cpp  test_spsc_ring_buffer.cpp  test_spsc_ring_buffer_stress.cpp
docker/: Dockerfile  README.md
docs/: BENCHMARKS.md  benchmarks_report.html
docs/perf/: README.md  latency_bench_docker_stdout.txt  latency_report.html  macos_sample_native.txt  perf_report_flat.txt  perf_report_top.txt
docs/perf/phase12/: README.md  linux_latency_after.txt  linux_perf_report_after.txt  macos_latency_after.txt  macos_sample_after.txt
docs/perf/valgrind/: README.md
io/: CMakeLists.txt  async_network_reader.cpp  async_network_reader.hpp  feed_generator.cpp  feed_generator.hpp  pipeline_runner.cpp  pipeline_runner.hpp  shard_demux.cpp  shard_demux.hpp  test_async_network_reader.cpp  test_feed_generator.cpp  test_pipeline_e2e.cpp  test_shard_demux.cpp
orderbook/: CMakeLists.txt  object_pool.hpp  order_book.cpp  order_book.hpp  test_alloc_counter.cpp  test_alloc_counter.hpp  test_object_pool.cpp  test_object_pool_concurrency.cpp  test_order_book.cpp
protocol/: CMakeLists.txt  byte_order.hpp  decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp  message_types.hpp  test_protocol.cpp
publisher/: CMakeLists.txt  book_delta.hpp  publisher.cpp  publisher.hpp  test_publisher.cpp
tests/: CMakeLists.txt  test_hello.cpp
